fix mobile p spacing, image size

--- a/scss/stylesheet.css
+++ b/scss/stylesheet.css
@@ -58,6 +58,7 @@
   .home {
     display: flex;
     flex-direction: column;
+    width: 100%;
   }
   #intro_text {
     order: 2;
@@ -65,13 +66,18 @@
   #intro_photo {
     order: 1;
   }
+  .home__profile {
+    width: 250px;
+    height: 250px;
+  }
   .intro_about-p {
     padding: 0 2rem;
+    width: 100%;
   }
   .home__intro {
     text-align: center;
     margin: 2rem 0;
-    font-size: 1.4em;
+    font-size: 2em;
   }
   .sections__title {
     font-size: 2rem;
